第一个git作业

--- a/作业/index.html
+++ b/作业/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h2><a href="#">那里·国际家居</a></h2>
+        <h2><a href="#"><img src="http://www.nalijiaju.com.cn/skin/nalijiaju/style/images/logo.png" alt=""></a></h2>
         <ul>
             <li class="head">
                 <a href="#">首页</a>
@@ -414,14 +414,15 @@
             </div>
             <!-- 备案号copy -->
             <div class="copy">
-                <p>Copyright © 2007-2019 那里家居 京ICP备19009601号&nbsp;&nbsp;<a href="#">鲁班园家具生产</a>&nbsp;&nbsp;&nbsp;<a href="#">家具生产</a></p>
+                <p>Copyright © 2007-2019 那里家居 京ICP备19009601号&nbsp;&nbsp;<a href="#">鲁班园家具生产</a>&nbsp;&nbsp;&nbsp;<a
+                        href="#">家具生产</a></p>
             </div>
-            
+
         </div>
     </section>
 </body>
 <script type="text/javascript">
- var imgs = document.getElementsByClassName("banner_img");
+    var imgs = document.getElementsByClassName("banner_img");
     var next = document.getElementById("next");
     var billboard = document.getElementById("billboard")
     var billboard_title = document.getElementsByClassName("billboard_title")
@@ -540,7 +541,7 @@
             message_list_left[i].style.opacity = 1;
             shade[i].style.opacity = 0;
         }
-    }   
+    }
 
 </script>
 
